# cudaLargeArrayEigen

./: .gitignore  CMakeLists.txt  README.md  TODO.md  WORKFLOW.md  cmake_uninstall.cmake.in  temp.txt  temp_matmul.txt  temp_vector.txt
include/: IRAM.hpp  arnoldi.hpp  cuda_manager.hpp  eigenSolver.hpp  errormsg.hpp  gpu_restart.hpp  gpu_shift.hpp  interface.hpp  lapack_manager.hpp  matmul.hpp  perfTests.hpp  shift.hpp  structs.hpp  tests.hpp  utils.hpp  vector.hpp
src/: _test.cpp  main.cpp  test.cu
tests/: arnoldi.hpp  cublas_test.hpp  eigensolver_test.hpp  matmul_test.hpp  shift_test.hpp
